mudei a foto e coloquei lista ordenada e descriçao

--- a/index.html
+++ b/index.html
@@ -4,35 +4,28 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <style>
-/*  
-   body{background-color:rgb(41, 59, 95)}
-
-h1{color: rgb(219, 230, 253);}
-
-;}
-#2{color: lawngreen;} */
-
-    </style>
+    
 </head>                             
 <body>
 <h1>Matheus F. M. Mena</h1>
 <br>
 <br>
 <br>
-<img src="eu.jpg" alt="foto de perfil tomando café " width="390">
+<img src="FOTOTRYBE.jpeg" alt="foto de perfil trybe" width="250" height="340">
 
     <p>
       <h1><strong> uma breve descrição:</strong>, </h1>
-      <br> nacionalidade
-      <br> cidade/estado onde mora;
+      <br> nacionalidade:Brasileira
+      <br> cidade/estado onde mora;Bragança Paulista
     </p>
 
     <h1><p id="2"><strong>habilidades,</strong></h1>
-      <br> Criatividade
-      <br> Reflexão 
-      <br> Organização 
-      <br> DESTAcar Criatividade </p>
+      <ul>
+      <br> <li><em >Criatividade</em></li>
+      <br> <li>Reflexão </li>
+      <br> <li>Organização</li> 
+    </ul> 
+   </p>
 
     <p><a href="http://127.0.0.1:5501/eu.jpg"> picture link</a></p>
     <br>
