--- a/index.html
+++ b/index.html
@@ -7,25 +7,28 @@
     
 </head>                             
 <body>
-<h1>Matheus F. M. Mena</h1>
-<br>
-<br>
-<br>
-<img src="FOTOTRYBE.jpeg" alt="foto de perfil trybe" width="250" height="340">
+  <div>
+    
+    <h1 class="meunome">Matheus F. M. Mena</h1>
+    <br>
+    <br>
+    <br>
+      <div class="image-container">
+        <img id="profilepic"src="FOTOTRYBE.jpeg" alt="foto de perfil trybe" >
+          <p class="descricao">
+         Olá, sou estudante de desenvolvimento web full stack na TRYBE.
+          </p> 
+    </div>
 
-    <p>
-      <h1><strong> uma breve descrição:</strong>, </h1>
-      <br> nacionalidade:Brasileira
-      <br> cidade/estado onde mora;Bragança Paulista
-    </p>
+  </div>
 
-    <h1><p id="2"><strong>habilidades,</strong></h1>
-      <ul>
-      <br> <li><em >Criatividade</em></li>
-      <br> <li>Reflexão </li>
-      <br> <li>Organização</li> 
-    </ul> 
-   </p>
+  <h1><p ><strong>habilidades,</strong></h1>
+  <ul>
+   <li><em >Criatividade</em></li>
+   <li>Reflexão </li>
+   <li>Organização</li> 
+  </ul> 
+  </p>
 
     <p><a href="http://127.0.0.1:5501/eu.jpg"> picture link</a></p>
     <br>
